# C-for-12-weeks

Week 1/: BMI.c  Converter.c  GradingSystem.c  HelloWorld.c  SimpleCalculator.c
Week 1/Reducate/: CMakeLists.txt  Reducate - Shortcut (2).lnk  Reducate - Shortcut.lnk  project_config.json
Week 1/Reducate/qml/: Reducate - Shortcut.lnk
Week 2/: Factorialandfibioacci.c  Multiplication.c  Patterns.c  RecursionPowerandSum.c
Week 2/CustomMathUtility/: main.c  math_utils.c  math_utils.h
Week 3/AnagramPalindrome/: main.c  text_utils.c  text_utils.h
Week 3/StatisticsTool/: main.c  statistics.h  statistics_utils.c
Week 3/Tic-Tack-Toe/: main.c  ttt.c  ttt.h
Week 3/WordCounter/: main.c
Week 4/: ArraytoPointer.c  Pointers.c  Stats.c
